--- a/about.html
+++ b/about.html
@@ -64,9 +64,15 @@
 
 	  <p>Wild Rescues is a member of the <a class="link" href="https://www.nwrawildlife.org/" target="_blank">National Wildlife Rehabilitators Association</a></p>
 
-
-	  <img src="images/tortoise.jpg" alt="tortoise eating vegetation" class="round">
-
+          <p>Watch the video below to meet our new, rescued friends.</p></p>
+		
+          <video controls poster="images/baby-hawk.jpg">
+	    <source src="media/wildrescues.mp4" type="video/mp4">	 
+               <source src="media/wildrescues.webm" type="video/webm">
+	       <p>Your Browser does not support the video element.</p>
+	       <track src="media/captions.vtt" kind="captions" srclang="en" label='captions">
+	       <track src="media/descriptions.vtt" kind="descriptions" srclang="en" label=English">
+          </video>
 	  <h3>We help many animals, such as:</h3>
 
 
