--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@
 	    <source src="media/wildrescues.mp4" type="video/mp4">	 
                <source src="media/wildrescues.webm" type="video/webm">
 	       <p>Your Browser does not support the video element.</p>
-	       <track src="media/captions.vtt" kind="captions" srclang="en" label='captions">
-	       <track src="media/descriptions.vtt" kind="descriptions" srclang="en" label=English">
+	       <track src="media/captions.vtt" kind="captions" srclang="en" label="English">
+	       <track src="media/descriptions.vtt" kind="descriptions" srclang="en" label="English">
           </video>
 	  <h3>We help many animals, such as:</h3>
 
