--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 	
-	Student Name: RAVI G PRAJAPATI
+	Student Name: RAVINDRA GOVINDBHAI PRAJAPATI
 	File Name: about.html
 	Date: 10/17/2024
 -->
@@ -64,7 +64,7 @@
 
 	  <p>Wild Rescues is a member of the <a class="link" href="https://www.nwrawildlife.org/" target="_blank">National Wildlife Rehabilitators Association</a></p>
 
-          <p>Watch the video below to meet our new, rescued friends.</p></p>
+          <p>Watch the video below to meet our new, rescued friends.</p>
 		
           <video controls poster="images/baby-hawk.jpg">
 	    <source src="media/wildrescues.mp4" type="video/mp4">	 
